--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,16 @@ dependencies {
     compile 'com.android.support:design:27.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     provided 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
     compile 'me.drakeet.materialdialog:library:1.3.1'
+    //DotIndicator
+    implementation 'com.matthew-tamlin:sliding-intro-screen:3.2.0'
+    //recyclerview
+    implementation 'com.android.support:recyclerview-v7:27.0.2'
+    compile 'com.android.support:cardview-v7:27.0.+'
+
 }
