--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.ojig">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -14,8 +16,15 @@
         <activity android:name=".Flash">
         </activity>
 
-        <activity android:name=".Buy.Buy"></activity>
+        <activity android:name=".Activity.VideoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Activity.VideoDetailActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Buy.Buy"
+            android:screenOrientation="portrait"/>
 
+        <activity android:name=".Buy.Buy_Write"
+            android:screenOrientation="portrait"/>
         <activity android:name=".User.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
