20180509-pjh Sell 레이아웃 생성 및 클래스 선언

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="test.ojig">
+
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,18 +15,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".Flash">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".Flash"></activity>
 
 
-        <activity android:name=".Buy.Buy"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".Buy.Buy"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Buy.Buy_Write"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Buy.Buy_Focus"
+            android:screenOrientation="portrait" />
 
-        <activity android:name=".Buy.Buy_Write"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".Buy.Buy_Focus"></activity>
+
+        <activity
+            android:name=".Sell.Sell"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Sell.Sell_Write"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Sell.Sell_Focus"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".User.Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,5 +51,5 @@
         <activity android:name=".promotion.Promotion"></activity>
         <activity android:name=".promotion.Promotion_Focus"></activity>
     </application>
-    <uses-permission  android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
