--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".Flash"></activity>
+        <activity android:name=".Flash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
         <activity
@@ -41,13 +47,12 @@
             android:screenOrientation="portrait" />
 
         <activity android:name=".User.Login">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".User.Join"></activity>
+        <activity android:name=".User.Join"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".User.Join_Address"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".promotion.Promotion"></activity>
         <activity android:name=".promotion.Promotion_Focus"></activity>
     </application>
