20180514-pjh Local Package 개설 Layout 작업

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,12 @@
         <activity
             android:name=".Sell.Sell_Focus"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".Local.Local"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Local.Local_Focus"
+            android:screenOrientation="portrait" />
 
         <activity android:name=".User.Login">
 
