20180524 - 프로젝트 통합본 -1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,15 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"></activity>
         <activity android:name=".User.Login">
+        </activity>
+        <activity android:name=".Start"></activity>
+        <activity android:name=".Flash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Start"></activity>
-
 
         <activity
             android:name=".Buy.Buy"
@@ -62,7 +63,8 @@
         <activity
             android:name=".Store.Store_Focus"
             android:screenOrientation="portrait" />
-
+        <activity android:name=".Others.Others"
+            android:screenOrientation="portrait"/>
         <activity android:name=".User.Join"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".User.Join_Address"
