20180528-pjh Sell Machine 수정 및 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,12 +64,18 @@
             android:name=".Store.Store_Focus"
             android:screenOrientation="portrait"/>
 
+        <activity android:name=".Machine.Machine"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".Machine.Machine_Focus"
+            android:screenOrientation="portrait"/>
+
+        <activity android:name=".Machine.Machine_Write"
+            android:screenOrientation="portrait"/>
+
+
         <activity android:name=".Others.Others"
             android:screenOrientation="portrait"/>
-
-        <activity android:name=".Delivery.Delivery_Address"
-            android:screenOrientation="portrait"/>
-
         <activity android:name=".User.Join"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".User.Join_Address"
