--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     defaultConfig {
         applicationId "test.ojig"
         minSdkVersion 19
-        targetSdkVersion 27
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -32,4 +32,7 @@ dependencies {
     compile 'me.drakeet.materialdialog:library:1.3.1'
     //프래그먼트 도트 라이브러리
     compile 'com.matthew-tamlin:sliding-intro-screen:3.2.0'
+    //구글 푸시 서버
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
