20180607-pjh 이미지 확대

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,6 +86,8 @@
             android:screenOrientation="portrait"/>
 
 
+        <activity android:name=".Uitility.FullScreenImage"
+            android:screenOrientation="portrait"/>
         <activity android:name=".Others.Others"
             android:screenOrientation="portrait"/>
         <activity android:name=".User.Join"
