--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,7 @@ dependencies {
     compile 'com.matthew-tamlin:sliding-intro-screen:3.2.0'
     //구글 푸시 서버
     compile 'com.google.firebase:firebase-messaging:10.0.1'
+    //이미지 줌인
+    implementation 'com.github.chrisbanes:PhotoView:1.2.6'
 }
 apply plugin: 'com.google.gms.google-services'
