20180611 - 이미지 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
             android:screenOrientation="portrait"/>
         <activity android:name=".Others.Others"
             android:screenOrientation="portrait"/>
+        <activity android:name=".Others.Others_txt"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Others.Others_Menu"
+            android:screenOrientation="portrait"/>
         <activity android:name=".User.Join"
             android:screenOrientation="portrait"></activity>
         <activity android:name=".User.Find"
